--- a/src/app/playground/playground.component.css
+++ b/src/app/playground/playground.component.css
@@ -25,10 +25,59 @@ header,
 nav {
     width: 100%;
     align-self: stretch;
+    z-index: 5;
 }
 
 nav {
     position: absolute;
+    opacity: 0;
+    transition: opacity 2.0s ease;
+}
+
+.display {
+    opacity: 1;
+}
+
+.nav-animation-bar {
+    z-index: 4;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    transition: background 8.5s ease;
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+}
+
+.nav-animation-bar::before,
+.nav-animation-bar::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transform-origin: 50% 50%;
+    transform: scaleY(0);
+    transition: transform 1.6s ease;
+}
+
+.nav-animation-bar::before {
+    background: linear-gradient(to top, #000 0%, #000 50%, transparent 50%, transparent 100%);
+}
+
+.nav-animation-bar::after {
+    background: linear-gradient(to bottom, #000 0%, #000 60%, transparent 50%, transparent 100%);
+}
+
+.nav-animation-bar.active::before,
+.nav-animation-bar.active::after {
+    transform: scaleY(1);
+}
+
+.nav-animation-bar.disactive::before,
+.nav-animation-bar.disactive::after {
+    transform: scaleY(0);
 }
 
 .title {
@@ -92,4 +141,44 @@ p {
     display: flex;
     justify-content: center;
     margin-top: auto;
+}
+
+@media screen and (max-width: 1400px) {
+    .title {
+        margin-top: 8%;
+
+        .txt-my {
+            font-size: 150px;
+        }
+
+        .txt-section {
+            font-size: 140px;
+        }
+    }
+
+    p {
+        font-size: 18px;
+    }
+
+    .info {
+        margin-top: 35%;
+    }
+
+    .fix {
+        margin-top: 3%;
+    }
+}
+
+@media screen and (max-width: 1740px) {
+    p {
+        font-size: 20px;
+    }
+
+    .info {
+        margin-top: 2%;
+    }
+
+    .fix {
+        margin-top: 3%;
+    }
 }
