--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -27,10 +27,60 @@ nav {
 
 header {
     width: 100%;
+    z-index: 5;
 }
 
 nav {
     top: 43%;
+    z-index: 5;
+    opacity: 0;
+    transition: opacity 2.0s ease;
+}
+
+.display {
+    opacity: 1;
+}
+
+.nav-animation-bar {
+    z-index: 4;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    transition: background 8.5s ease;
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+}
+
+.nav-animation-bar::before,
+.nav-animation-bar::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transform-origin: 50% 50%;
+    transform: scaleY(0);
+    transition: transform 1.6s ease;
+}
+
+.nav-animation-bar::before {
+    background: linear-gradient(to top, #000 0%, #000 50%, transparent 50%, transparent 100%);
+}
+
+.nav-animation-bar::after {
+    background: linear-gradient(to bottom, #000 0%, #000 60%, transparent 50%, transparent 100%);
+}
+
+.nav-animation-bar.active::before,
+.nav-animation-bar.active::after {
+    transform: scaleY(1);
+}
+
+.nav-animation-bar.disactive::before,
+.nav-animation-bar.disactive::after {
+    transform: scaleY(0);
 }
 
 .about-me-img {
@@ -51,10 +101,11 @@ nav {
     align-items: center;
     justify-content: center;
 
-    .top-description, .bottom-description {
+    .top-description,
+    .bottom-description {
         display: flex;
     }
-    
+
     .circle {
         position: absolute;
         background-color: #EBEBEB;
@@ -63,11 +114,11 @@ nav {
         border-radius: 100%;
         margin: 1.3em 0 0 50px;
     }
-    
+
     .top-description {
         justify-content: left;
     }
-    
+
     .top-description p {
         padding-left: 50px;
         text-indent: 280px;
@@ -78,19 +129,19 @@ nav {
         line-height: 1.3em;
         text-align: justify;
     }
-    
+
     .top-description .f-secondary {
         color: #EBEBEB;
         font: 400 80px 'Shadows Into Light Two', -apple-system, Roboto, Helvetica,
             sans-serif;
         line-height: 1.3em;
     }
-    
+
     .bottom-description {
         padding-top: 170px;
         justify-content: right;
     }
-    
+
     .bottom-description p {
         padding-right: 50px;
         text-indent: 580px;
@@ -101,7 +152,7 @@ nav {
         line-height: 1.3em;
         text-align: right;
     }
-    
+
     .bottom-description .f-secondary {
         color: #EBEBEB;
         font: 400 80px 'Shadows Into Light Two', -apple-system, Roboto, Helvetica,
@@ -114,12 +165,13 @@ nav {
     width: 100%;
     margin-top: 200px;
 
-    .top-skills-display, .bottom-skills-display {
+    .top-skills-display,
+    .bottom-skills-display {
         display: flex;
         position: relative;
         margin: 0;
     }
-    
+
     .top-skills-display {
         gap: 100px;
         display: flex;
@@ -127,15 +179,16 @@ nav {
         animation: scrollLeft 35s linear infinite;
         margin-bottom: 15px;
     }
-    
+
     .bottom-skills-display {
         gap: 100px;
         display: flex;
         white-space: nowrap;
         animation: scrollRight 35s linear infinite;
     }
-    
-    .top-skills-display p, .bottom-skills-display p {
+
+    .top-skills-display p,
+    .bottom-skills-display p {
         color: #EBEBEB;
         font: 400 50px Inter, sans-serif;
         line-height: 1.3em;
@@ -149,20 +202,23 @@ nav {
     justify-content: space-around;
     margin-bottom: 50px;
 
-    .cv-content, .contact-content {
+    .cv-content,
+    .contact-content {
         width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin-top: 50px;
+        margin-top: 150px;
     }
-    
-    .cv-content p, .contact-content p {
+
+    .cv-content p,
+    .contact-content p {
         font: 400 70px Inter, sans-serif;
         color: #EBEBEB;
+        margin: 60px 0;
     }
-    
+
     .cv-button {
         width: auto;
         border: 4px solid #EBEBEB;
@@ -175,18 +231,12 @@ nav {
         text-decoration: none;
         text-wrap: nowrap;
     }
-    
+
     .cv-button:hover {
         background-color: #EBEBEB;
         color: #1E1E1E;
     }
-    
-    .contact-content .f-secondary {
-        font: 400 65px 'Shadows Into Light Two', -apple-system, Roboto, Helvetica,
-                sans-serif;
-        color: #EBEBEB;
-    }
-    
+
     .contact-button {
         background-color: #EBEBEB;
         border: 4px solid #EBEBEB;
@@ -202,17 +252,13 @@ nav {
         text-decoration: none;
         text-wrap: nowrap;
     }
-    
+
     .contact-button:hover {
         background-color: #1E1E1E;
         border: 4px solid #EBEBEB;
         color: #EBEBEB;
     }
 }
-
-/*.contact-button img {
-    margin-left: 10px;
-}*/
 
 .eop {
     font: 300 14px Inter, sans-serif;
@@ -227,6 +273,7 @@ nav {
     0% {
         transform: translateX(0);
     }
+
     100% {
         transform: translateX(calc(-100% - 20px));
     }
@@ -236,6 +283,7 @@ nav {
     0% {
         transform: translateX(calc(-100% - 20px));
     }
+
     100% {
         transform: translateX(0);
     }
@@ -251,8 +299,61 @@ nav {
     }
 }
 
+@media screen and (max-width: 1400px) {
+    .top-description {
+        width: 85%;
+    }
+
+    .top-description p {
+        font-size: 70px;
+        text-indent: 170px;
+    }
+
+    .bottom-description p {
+        font-size: 70px;
+        text-indent: 400px;
+        width: 80%;
+    }
+
+    .about-me-img {
+        width: 70%;
+    }
+
+    .cv-content p,
+    .contact-content p {
+        font-size: 50px;
+    }
+
+    .cv-button,
+    .contact-button {
+        font-size: 25px;
+    }
+
+    .top-skills-display p,
+    .bottom-skills-display p {
+        font-size: 40px;
+    }
+}
+
+@media screen and (max-width: 1740px) {
+    .top-description {
+        width: 85%;
+    }
+
+    .top-description p {
+        font-size: 80px;
+        text-indent: 170px;
+    }
+
+    .bottom-description p {
+        font-size: 80px;
+        text-indent: 500px;
+        width: 65%;
+    }
+}
+
 @media screen and (min-width: 1741px) {
     .top-description {
-        width: 65%;
+        width: 75%;
     }
 }
