--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div [@routeAnimations]="getRouteAnimationData()">
-    <router-outlet></router-outlet>
+<div>
+    <router-outlet #outlet="outlet"></router-outlet>
 </div>
