--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -26,10 +26,60 @@ header,
 nav {
     width: 100%;
     align-self: stretch;
+    z-index: 5;
 }
 
 nav {
     position: absolute;
+    z-index: 5;
+    opacity: 0;
+    transition: opacity 2.0s ease;
+}
+
+.display {
+    opacity: 1;
+}
+
+.nav-animation-bar {
+    z-index: 4;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    transition: background 8.5s ease;
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+}
+
+.nav-animation-bar::before,
+.nav-animation-bar::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transform-origin: 50% 50%;
+    transform: scaleY(0);
+    transition: transform 1.6s ease;
+}
+
+.nav-animation-bar::before {
+    background: linear-gradient(to top, #000 0%, #000 50%, transparent 50%, transparent 100%);
+}
+
+.nav-animation-bar::after {
+    background: linear-gradient(to bottom, #000 0%, #000 60%, transparent 50%, transparent 100%);
+}
+
+.nav-animation-bar.active::before,
+.nav-animation-bar.active::after {
+    transform: scaleY(1);
+}
+
+.nav-animation-bar.disactive::before,
+.nav-animation-bar.disactive::after {
+    transform: scaleY(0);
 }
 
 .title {
@@ -64,7 +114,6 @@ nav {
 
     .contact-info {
         padding-top: 100px;
-
         margin-left: 50px;
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -98,8 +147,49 @@ nav {
     height: auto;
 }
 
-@media screen and (max-width: 1740px) {
+@media screen and (max-width: 1400px) {
+    .title {
+        top: 5%;
+    
+        .txt-start {
+            font-size: 120px;
+        }
+    
+        .txt-end {
+            font-size: 100px;
+        }
+    }
+
+    .contact-content {
+
+        .contact-info {
+            gap: 10px 25%;
+    
+            .contact-info-section {
+                gap: 90px;
+            }
+        }
+    }
+
+    .image img {
+        width: 400px;
+    }
 }
 
-@media screen and (min-width: 1741px) {
+@media screen and (max-width: 1740px) {
+    .title {
+        top: 4%;
+    
+        .txt-start {
+            font-size: 120px;
+        }
+    
+        .txt-end {
+            font-size: 100px;
+        }
+    }
+
+    .image img {
+        width: 400px;
+    }
 }
