--- a/src/app/navbar/title.component.css
+++ b/src/app/navbar/title.component.css
@@ -1,5 +1,6 @@
 .title {
     display: none;
+    opacity: 0;
     width: 100%;
     position: absolute;
     top: 50%;
@@ -7,6 +8,7 @@
     transform: translateY(-50%);
     justify-content: center;
     pointer-events: none;
+    z-index: 6;
 }
 
 .txt-start {
@@ -16,6 +18,7 @@
         sans-serif;
     overflow: hidden;
     white-space: nowrap;
+    transition: color 2.0s ease;
 }
 
 .txt-end {
@@ -24,6 +27,7 @@
     font: 400 190px Inter, sans-serif;
     overflow: hidden;
     white-space: nowrap;
+    transition: color 2.0s ease;
 }
 
 .txt-start span,
