--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -20,9 +20,10 @@
                 layground
             </div>
         </div>
-        <nav>
-            <app-navbar></app-navbar>
+        <nav [class.display]="displayNav">
+            <app-navbar (pageRedirect)="redirectNav($event)"></app-navbar>
         </nav>
+        <div class="nav-animation-bar" [class.active]="isAnimationActive" [class.disactive]="!isAnimationActive"></div>
         <div class="info">
             <p class="info-intro">
                 Step into my creative haven, where I showcase an eclectic mix of designs, explorations, discarded
@@ -31,7 +32,7 @@
             </p>
         </div>
         <p class="fix">I'm currently working on this section, visit me again soon!</p>
-        <p class="footer">just an ordinary designer</p>
+        <p class="footer">just an ordinary designer and developer</p>
         <!--<div class="image">
                 <img [src]="img" alt="img">
             </div>-->
