--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -43,7 +43,11 @@ nav {
 
 .about-me-img {
     position: absolute;
+    opacity: 0.7;
     margin-top: 200px;
+}
+
+.about-me-img img {
 }
 
 .content {
