--- a/src/app/about/animations.css
+++ b/src/app/about/animations.css
@@ -4,9 +4,10 @@
     align-self: center;
     justify-content: center;
     transition: background 8.5s ease;
-    position: absolute;
+    position: fixed;
     height: 100vh;
     width: 100%;
+    pointer-events: none;
 }
 
 .nav-animation-bar::before,
