mobile responsive temporal view

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,6 +30,9 @@
     </div>
     <p class="footer">just an ordinary designer and developer</p>
   </div>
+  <div class="mobile-responsive">
+    <p>yep, I'm currently working on <span class="f-secondary">mobile responsive,</span> it will be better if you open it in your computer, please :)</p>
+  </div>
 </body>
 
 </html>
