--- a/src/app/my-works/my-works.component.html
+++ b/src/app/my-works/my-works.component.html
@@ -7,6 +7,15 @@
     <title>Works</title>
 </head>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-98EDVRLBCB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-98EDVRLBCB');
+</script>
+
 <body>
     <!--<div class="transition">
         <div class="title-transition">
