--- a/src/app/my-works/project/project.component.html
+++ b/src/app/my-works/project/project.component.html
@@ -3,8 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>a</title>
+  <title>Project</title>
 </head>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-98EDVRLBCB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-98EDVRLBCB');
+</script>
 
 <body>
   <div class="project" *ngIf="project">
