--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,13 +8,7 @@
 </head>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-98EDVRLBCB"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-98EDVRLBCB');
-</script>
+<script src="../gtag.js"></script>
 
 <body>
   <div class="home">
