--- a/src/app/my-works/project/project.component.html
+++ b/src/app/my-works/project/project.component.html
@@ -7,13 +7,7 @@
 </head>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-98EDVRLBCB"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-98EDVRLBCB');
-</script>
+<script src="../../gtag.js"></script>
 
 <body>
   <div class="project" *ngIf="project">
