--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-98EDVRLBCB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-98EDVRLBCB');
+    </script>
 </head>
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-98EDVRLBCB"></script>
-<script src="../gtag.js"></script>
 
 <body>
     <div class="about">
