--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,10 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-98EDVRLBCB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-98EDVRLBCB');
+    </script>
 </head>
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-98EDVRLBCB"></script>
-<script src="../gtag.js"></script>
 
 <body>
   <div class="home">
