--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -50,6 +50,7 @@
                     </ng-container>
                 </div>
             </div>
+            <!--<app-the-process></app-the-process>-->
             <div class="footer">
                 <div class="cv-content">
                     <p>anything else...?</p>
@@ -61,7 +62,6 @@
                     <p>let's create together :)</p>
                     <div class="contact-button">
                         contact me
-                        <!--<img [src]="arrowDiagonal" alt="arrow-diagonal">-->
                     </div>
                 </div>
             </div>
