--- a/src/app/my-works/my-works.component.html
+++ b/src/app/my-works/my-works.component.html
@@ -44,31 +44,51 @@
         <div class="nav-animation-bar" [class.active]="isAnimationActive"></div>
         <div class="works-index">
             <div class="works-nav">
-                <p class="works-year-txt" (click)="updateDisplay(2023)" [ngClass]="{ 'selected': year === 2023 }">2023</p>
+                <!--<p class="works-year-txt" (click)="updateDisplay(2024)" [ngClass]="{ 'selected': year === 2024 }">2024</p>
+                <p class="works-year-txt" (click)="updateDisplay(2023)" [ngClass]="{ 'selected': year === 2023 }">2023</p>-->
                 <!--<p class="works-year-txt" (click)="updateDisplay(2022)" [ngClass]="{ 'selected': year === 2022 }">2022</p>-->
             </div>
-            <div class="works-year" *ngIf="year === 2023">
-                <div class="works-preview" id="works-preview" (mouseout)="handleUnhover()">
-                    <div *ngFor="let project of projects2023" class="work-preview-item">
-                        <a [routerLink]="['/projects', project.titleHeading]">
-                            <img loading="lazy" [src]="project.previewImg" class="img"
-                                id="{{ 'img' + project.titleHeading}}"
-                                (mouseover)="handleHover('img' + project.titleHeading)" />
-                        </a>
+            <div class="works-projects">
+                <div class="works-year">
+                    <p class="works-year-txt">2024</p>
+                    <div class="works-preview" id="works-preview" (mouseout)="handleUnhover()">
+                        <div *ngFor="let project of projects2024" class="work-preview-item">
+                            <a [routerLink]="['/projects', project.titleHeading]">
+                                <img loading="lazy" [src]="project.previewImg" class="img"
+                                    id="{{ 'img' + project.titleHeading}}"
+                                    (mouseover)="handleHover('img' + project.titleHeading, project.titleHeading)" />
+                            </a>
+                        </div>
+                        <div class="projects-nbr" *ngIf="projects2024.length > 1">{{ projects2024.length }} projects</div>
+                        <div class="projects-nbr" *ngIf="projects2024.length == 1">{{ projects2024.length }} project</div>
                     </div>
-                    <div class="projects-nbr">{{ projects2023.length }} projects</div>
                 </div>
-            </div>
-            <div class="works-year" *ngIf="year === 2022">
-                <div class="works-preview" id="works-preview" (mouseout)="handleUnhover()">
-                    <div *ngFor="let project of projects2022" class="work-preview-item">
-                        <a [routerLink]="['/projects', project.titleHeading]">
-                            <img loading="lazy" [src]="project.previewImg" class="img"
-                                id="{{ 'img' + project.titleHeading}}"
-                                (mouseover)="handleHover('img' + project.titleHeading)" />
-                        </a>
+                <div class="works-year">
+                    <p class="works-year-txt">2023</p>
+                    <div class="works-preview" id="works-preview" (mouseout)="handleUnhover()">
+                        <div *ngFor="let project of projects2023" class="work-preview-item">
+                            <a [routerLink]="['/projects', project.titleHeading]">
+                                <img loading="lazy" [src]="project.previewImg" class="img"
+                                    id="{{ 'img' + project.titleHeading}}"
+                                    (mouseover)="handleHover('img' + project.titleHeading, project.titleHeading)" />
+                            </a>
+                        </div>
+                        <div class="projects-nbr" *ngIf="projects2023.length > 1">{{ projects2023.length }} projects</div>
+                        <div class="projects-nbr" *ngIf="projects2023.length == 1">{{ projects2023.length }} project</div>                    </div>
+                </div>
+                <div class="works-year" *ngIf="projects2022.length">
+                    <p class="works-year-txt">2022</p>
+                    <div class="works-preview" id="works-preview" (mouseout)="handleUnhover()">
+                        <div *ngFor="let project of projects2022" class="work-preview-item">
+                            <a [routerLink]="['/projects', project.titleHeading]">
+                                <img loading="lazy" [src]="project.previewImg" class="img"
+                                    id="{{ 'img' + project.titleHeading}}"
+                                    (mouseover)="handleHover('img' + project.titleHeading, project.titleHeading)" />
+                            </a>
+                        </div>
+                        <div class="projects-nbr" *ngIf="projects2022.length > 1">{{ projects2022.length }} projects</div>
+                        <div class="projects-nbr" *ngIf="projects2022.length == 1">{{ projects2022.length }} project</div>
                     </div>
-                    <div class="projects-nbr">{{ projects2022.length }} projects</div>
                 </div>
             </div>
         </div>
