--- a/src/app/my-works/project/project.component.css
+++ b/src/app/my-works/project/project.component.css
@@ -122,7 +122,7 @@ nav {
     }
 }
 
-.project-images {
+.project-images, .isologo-container {
     display: flex;
     justify-content: flex-end;
     right: 0;
@@ -133,6 +133,11 @@ nav {
     height: 100vh;
     max-width: 100%;
     margin: 0 auto;
+}
+
+.isologo {
+    left: 0;
+    position: absolute;
 }
 
 .project-description {
@@ -215,5 +220,15 @@ nav.active {
         max-width: 50vw;
         max-height: 100vh;
         object-fit: cover;
+    }
+}
+
+
+@media screen and (max-width: 1740px) {
+    .project-details {
+        margin-top: 20%;
+    }
+    nav {
+        top: 40%;
     }
 }
