--- a/src/app/my-works/responsive.css
+++ b/src/app/my-works/responsive.css
@@ -21,11 +21,15 @@
         margin-top: 6%;
 
         .txt-my {
-            font-size: 170px;
+            font-size: 160px;
         }
 
         .txt-section {
-            font-size: 130px;
+            font-size: 120px;
         }
+    }
+
+    nav {
+        top: 40%;
     }
 }
