--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -43,7 +43,7 @@
                 <div class="contact-info-section">
                     <p class="contact-info-section-title">Email</p>
                     <div class="contact-info-section-info">
-                        <p class="contact-info-section-info-txt"><a href="mailto:solnicandrade@gmail.com">solnicandrade@gmail.com</a></p>
+                        <p class="contact-info-section-info-txt"><a href="https://mail.google.com/mail/u/0/?pli=1#inbox?compose=GTvVlcRwPkPJKQfQFGGhhdBHStKnjxCkNCWcHskCBKZzfRPTmClLWDNPqqRtFRqLTjccmkpkkTTdJ" target="_blank">solnicandrade@gmail.com</a></p>
                     </div>
                 </div>
                 <div class="contact-info-section">
