--- a/src/app/contact/responsive.css
+++ b/src/app/contact/responsive.css
@@ -1,3 +1,22 @@
+@media screen and (max-width: 1740px) {
+    .title {
+        top: 4%;
+    
+        .txt-start {
+            font-size: 120px;
+        }
+    
+        .txt-end {
+            font-size: 100px;
+        }
+    }
+
+    .image img {
+        width: 400px;
+    }
+}
+
+
 @media screen and (max-width: 1400px) {
     .title {
         top: 5%;
@@ -27,20 +46,17 @@
     }
 }
 
-@media screen and (max-width: 1740px) {
+
+@media screen and (max-width: 1280px) {
     .title {
-        top: 4%;
+        margin-top: 3%;
     
         .txt-start {
-            font-size: 120px;
+            font-size: 110px;
         }
     
         .txt-end {
-            font-size: 100px;
+            font-size: 80px;
         }
-    }
-
-    .image img {
-        width: 400px;
     }
 }
