--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,6 +5,7 @@ body {
   padding: 0;
   max-height: 100%;
   overflow: hidden;
+  height: 100vh;
 }
 
 .home {
@@ -149,11 +150,6 @@ nav {
   .image img {
     width: 350px;
   }
-
-  .mobile-responsive {
-    opacity: 0;
-    z-index: -1;
-  }
 }
 
 
@@ -173,7 +169,9 @@ nav {
   .image img {
     width: 320px;
   }
+}
 
+@media screen and (min-width: 990px) {
   .mobile-responsive {
     opacity: 0;
     z-index: -1;
@@ -181,7 +179,7 @@ nav {
 }
 
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 990px) {
   .mobile-responsive {
     opacity: 1;
     position: fixed;
