home responsive (no menu)

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -41,7 +41,6 @@ nav {
   .txt-my {
     color: #000;
     text-align: center;
-    letter-spacing: -9px;
     font: 400 200px 'Shadows Into Light Two', -apple-system, Roboto, Helvetica,
       sans-serif;
   }
@@ -116,95 +115,6 @@ nav {
   transform: scaleY(1);
 }
 
-@media screen and (max-width: 1740px) {
-  .title {
-    margin-top: 0px;
-
-    .txt-my {
-      font-size: 180px;
-    }
-
-    .txt-section {
-      font-size: 160px;
-    }
-  }
-
-  .image img {
-    width: 380px;
-  }
-}
-
-@media screen and (max-width: 1400px) {
-  .title {
-    margin-top: 0px;
-
-    .txt-my {
-      font-size: 150px;
-    }
-
-    .txt-section {
-      font-size: 140px;
-    }
-  }
-
-  .image img {
-    width: 350px;
-  }
-}
-
-
-@media screen and (max-width: 1280px) {
-  .title {
-    margin-top: 0px;
-
-    .txt-my {
-      font-size: 140px;
-    }
-
-    .txt-section {
-      font-size: 120px;
-    }
-  }
-
-  .image img {
-    width: 320px;
-  }
-}
-
-@media screen and (min-width: 990px) {
-  .mobile-responsive {
-    opacity: 0;
-    z-index: -1;
-  }
-}
-
-
-@media screen and (max-width: 990px) {
-  .mobile-responsive {
-    opacity: 1;
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 100vw;
-    z-index: 1000;
-    background-color: #1e1e1e;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .mobile-responsive p {
-    padding: 0 20px;
-    color: #EBEBEB;
-    text-align: center;
-    margin: auto 0;
-    font: 400 24px Inter, sans-serif;
-  }
-
-  .f-secondary {
-    text-align: center;
-    font: 400 26px 'Shadows Into Light Two', -apple-system, Roboto, Helvetica,
-      sans-serif;
-  }
+.fact {
+  display: none;
 }
