--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,6 +33,7 @@
     </nav>
     <img [src]="pixel"/>
     <div class="nav-animation-bar" [class.active]="isAnimationActive"></div>
+    <p class="fact">I enjoy conceptualizing ideas and bringing them to life, nurturing them from inception into impactful and memorable accomplishments.</p>
     <div class="image">
       <!--<img loading="lazy" src="../../assets/img/main-pfp.png" class="img"/>-->
       <img loading="lazy" [src]="img" class="img"/>
